--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 
 <html>
-<head><link rel="stylesheet" style="text/css" href="home.css"></link>
+<head><link rel="stylesheet" style="text/css" href="index.css"></link>
 <title>John Love</title>
 <body>
         <div id="header">John Love Portfolio</div>
