--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 		<p> I have a passion for drawing... even though its good i still want to escalate on it more. Maybe even real people.
 			
 		<p>Starting a manga series called bloodlines</p>
-        <p> <a href="">READ ABOUT IT</p>
+        <p> <a href="john.html">READ ABOUT IT</p>
         <img class="" src="" width="300" height="400"></img>
 </body>
 </html>
