--- a/nathaniel.html
+++ b/nathaniel.html
@@ -18,6 +18,6 @@
         
         <h1>Nathaniel Hekiyama</h1>
         <p>Main Character in the series. Very goofy, almost easily tempered but loves to keep it real with someone. Nathaniel is from th hekiyama clan which consist of werewolves but they can manipulate the powers anytime they want. But nathaniel is special... he has been cursed with the blood of a wendingo so his crave for blood is alittle bit unncontroled but irigo keeps him tied away from it. he has the ice wolf blood and is the dominant one of his pack [ which in cludes his siter grace--deeply in love with irigo-- silva-- kind of the sly mouth guy that makes everyone feel alittle corrupted-- and beo silvas twin-- loves to be sneaky and alittle mischeivious.] and they follow by the group with irigo as the crusaders since they all have a ketto eye. </p>
-        <img class="irigo" src=""></img>
+        <img class="nathaniel" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/1017695_132919166919219_1670470221_n.jpg" width="400" height="500"></img>
 </body>
 </html>
