--- a/about.html
+++ b/about.html
@@ -17,6 +17,6 @@
         
         <h1>About</h1>
         <p> </p>
-        <img class="resume" src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-prn2/603004_483426985068199_1107125928_n.jpg" width="300" height="400"></img>
+        <img class="resume" src="https://sphotos-a.xx.fbcdn.net/hphotos-ash4/999070_483430515067846_2051497645_n.jpg" width="300" height="400"></img>
 </body>
 </html>
