--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <body>
         <div id="header">John Love Portfolio</div>
         <div id="leftcolumn">
-             	<p><a href="home.html">Main page</a></p>
+             	<p><a href="index.html">Main page</a></p>
                 <p><a href="portfolio.html">Portfolio</a></p>
                 <p><a href="about.html">About</a></p>
                 <p><a href="contact.html">Contact</a></p>
